--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
               </p>
             </div>
             <div class="text-center text-lg-left paddin-top">
-              <a class="btn " href="https://jonmircha.com/jonmircha-cv.pdf" target="_blank" rel="noopener"
-                data-section="about" data-value="viewCv">DESCARGA MI
-                CV</a>
+              <a class="btn" href="./assets/cv-jose-es.pdf" target="_blank" rel="noopener" data-section="about"
+                data-value="changeCv">
+                <h4 data-section="about" data-value="viewCv">Mirar mi CV</h4>
+              </a>
             </div>
           </article>
           <article class="hero-image-picture">
@@ -376,7 +377,7 @@
   </section>
   <section id="contact" class="section">
     <h2 class="section-title" data-section="contact" data-value="titleContact">Contactame</h2>
-    <form action="https://formsubmit.co/jf181922@gmail.com" method="post" class="contact-form box-shadow-1">
+    <form action="https://formsubmit.co/joseferrer5243@gmail.com" method="post" class="contact-form box-shadow-1">
       <input type="text" name="name" id="name" placeholder="Ingresa tu nombre *" data-section="contact"
         data-value="placeholderInputName" title="" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
       <input type="email" name="email" id="email" placeholder="Ingresa tu correo *" data-section="contact"
@@ -391,7 +392,7 @@
       </div>
       <div class="contact-submit text-center">
         <button class="btn" type="submit" data-section="contact" data-value="sendButton">ENVIAR MENSAJE</button>
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500/portafolio-cv/index.html">
+        <input type="hidden" name="_next" value="https://joseferrer52.github.io">
         <input type="hidden" name="_captcha" value="false">
       </div>
     </form>
