--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <h3 data-section="Study" data-value="courseTitleNode">Learn Fundamentals Of Node.js Programming</h3>
           <span><i>Udemy</i></span>
           <p data-section="Study" data-value="courseDescriptionNode">
-            Learn and understand Node.js programming from scratch with practical examples and exercises
+            Learn and understand Node.js programming from scratch with practical examples and exercises.
           </p>
         </article>
       </a>
@@ -224,7 +224,7 @@
           <span><i>Udemy</i></span>
           <p data-section="Study" data-value="courseDescriptionSql">
             Domina el diseño, creación y gestión de bases de datos SQL de manera eficiente utilizando el sistema de
-            gestión de bases de datos MySQL
+            gestión de bases de datos MySQL.
           </p>
         </article>
       </a>
@@ -237,36 +237,36 @@
           <span><i>Udemy</i></span>
           <p data-section="Study" data-value="courseDescriptionHtml">
             Aprende HTML y CSS sin ningún conocimiento previo para el desarrollo modificación, visualización de
-            elementos <i>web</i>
+            elementos <i>web.</i>
           </p>
         </article>
       </a>
-      <article class="service-card">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path
-            d="M16.018,3.815L15.232,8h-4.966l0.716-3.815L9.018,3.815L8.232,8H4v2h3.857l-0.751,4H3v2h3.731l-0.714,3.805l1.965,0.369 L8.766,16h4.966l-0.714,3.805l1.965,0.369L15.766,16H20v-2h-3.859l0.751-4H21V8h-3.733l0.716-3.815L16.018,3.815z M14.106,14H9.141 l0.751-4h4.966L14.106,14z" />
-        </svg>
-        <h3><i>SMO</i></h3>
-        <p>
-          <i>Social Media Optimiztion</i> y <i>Marketing</i> de Contenidos, te ayudo a elegir los canales digitales
-          correctos para llegar tu
-          audiencia ideal.
-        </p>
-      </article>
-      <article class="service-card">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path fill="none"
-            d="M4 15v4h16.002L20 15H4zM16 18h-2v-2h2V18zM19 18h-2v-2h2V18zM4 5v4h16.002L20 5H4zM16 8h-2V6h2V8zM19 8h-2V6h2V8z" />
-          <path
-            d="M20 3H4C2.897 3 2 3.897 2 5v4c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V5C22 3.897 21.103 3 20 3zM4 9V5h16l.002 4H4zM20 13H4c-1.103 0-2 .897-2 2v4c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2v-4C22 13.897 21.103 13 20 13zM4 19v-4h16l.002 4H4z" />
-          <path d="M17 6H19V8H17zM14 6H16V8H14zM17 16H19V18H17zM14 16H16V18H14z" />
-        </svg>
-        <h3><i>Web Hosting</i></h3>
-        <p>
-          ¿No cuentas con dominio y hospedaje <i>web</i> para tu proyecto? No te preocupes de esas cosas técnicas me
-          encargo yo.
-        </p>
-      </article>
+      <a class="study-card" href="https://www.udemy.com/certificate/UC-e665ec02-a97b-46d6-b430-bb2ccb7095ef/
+      " target="_blank" rel="noopener">
+        <article class="service-card" title="Ver certificado" data-section="Study" data-value="certificateTooltip">
+          <img class="certificate" src="assets/diploma.png" alt="diploma" title="Ver certificado" data-section="Study"
+            data-value="certificateTooltip">
+          <h3 data-section="Study" data-value="courseTitlePostgre">Curso de Base de Datos PostgreSQL Server</h3>
+          <span><i>Udemy</i></span>
+          <p data-section="Study" data-value="courseDescriptionPostgre">
+            Domina el diseño, creación y gestión de bases de datos SQL de manera eficiente utilizando el sistema de
+            gestión de bases de datos PostgreSQL.
+          </p>
+        </article>
+      </a>
+      <a class="study-card" href="https://www.udemy.com/certificate/UC-f9b10944-7326-49d8-8de8-8bcb7a94f539/
+      " target="_blank" rel="noopener">
+        <article class="service-card" title="Ver certificado" data-section="Study" data-value="certificateTooltip">
+          <img class="certificate" src="assets/diploma.png" alt="diploma" title="Ver certificado" data-section="Study"
+            data-value="certificateTooltip">
+          <h3 data-section="Study" data-value="courseTitleMongo">Curso de Base de Datos MongoDB y NoSQL</h3>
+          <span><i>Udemy</i></span>
+          <p data-section="Study" data-value="courseDescriptionMongo">
+            Aprende NoSQL con MongoDB desde 0, sin conocimientos previos y realiza Consultas, relaciones, schemas de
+            datos y ABM.
+          </p>
+        </article>
+      </a>
     </div>
   </section>
   <section id="portfolio" class="portfolio section">
