--- a/index.html
+++ b/index.html
@@ -295,6 +295,16 @@
           </div>
         </aside>
       </a>
+      <a href="#trabajo-3" class="portfolio-card">
+        <img src="assets/portfolio-3.png" alt="Trabajo 2">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>listuser-api</h3>
+            <p data-section="portfolio" data-value="thirdProjectDescription">listuser-api es una mini API creada
+              para una prueba técnica. Esta API se desarrolló como parte del repositorio vau_backend_technical_test.</p>
+          </div>
+        </aside>
+      </a>
   </section>
   <article class="modal" id="trabajo-1">
     <div class="modal-content">
@@ -345,6 +355,33 @@
             <small data-section="modal" data-value="titleLink"><b>ENLACE:</b></small>
             <small><a href="https://images-optimizator-1.onrender.com" target="_blank"
                 rel="noopener">images-optimizator</a></small>
+          </aside>
+        </div>
+      </article>
+    </div>
+  </article>
+  <article class="modal" id="trabajo-3">
+    <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path
+            d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z" />
+        </svg>
+      </a>
+      <article class="portfolio-modal">
+        <img src="assets/favicon-listuser-api.png" alt="listuser-api">
+        <div class="portfolio-info">
+          <h3>listuser-api</h3>
+          <p data-section="modal" data-value="thirdModalDecription">listuser proporciona una manera eficiente y
+            sencilla de administrar y listar usuarios </p>
+          <aside class="portfolio-details">
+            <small data-section="modal" data-value="titleDate"><b>FECHA:</b></small>
+            <small data-section="modal" data-value="thirdDate">dic. 2024</small>
+            <small data-section="modal" data-value="titleType"><b>TIPO:</b></small>
+            <small>API</small>
+            <small data-section="modal" data-value="titleLink"><b>ENLACE:</b></small>
+            <small><a href="https://aesthetic-squirrel-569165.netlify.app" target="_blank" rel="noopener">listuser-api
+                documentación</a></small>
           </aside>
         </div>
       </article>
