adding the fourth project

--- a/index.html
+++ b/index.html
@@ -300,8 +300,20 @@
         <aside class="portfolio-card-info">
           <div>
             <h3>listuser-api</h3>
-            <p data-section="portfolio" data-value="thirdProjectDescription">listuser-api es una mini API creada
-              para una prueba técnica. Esta API se desarrolló como parte del repositorio vau_backend_technical_test.</p>
+            <p data-section="portfolio" data-value="thirdProjectDescription">listuser-api es una mini API creada para
+              una prueba técnica. Proporciona gestión de usuarios como creación, listado, actualización y eliminación de
+              usuarios.</p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-4" class="portfolio-card">
+        <img src="assets/portfolio-4.png" alt="Trabajo 2">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>listuser</h3>
+            <p data-section="portfolio" data-value="forthProjectDescription">listuser es una aplicacion creada para
+              mostar las vistas de la api listuser-api. Proporciona una forma sencilla de cómo funciona la API en tiempo
+              real.</p>
           </div>
         </aside>
       </a>
@@ -382,6 +394,33 @@
             <small data-section="modal" data-value="titleLink"><b>ENLACE:</b></small>
             <small><a href="https://aesthetic-squirrel-569165.netlify.app" target="_blank" rel="noopener">listuser-api
                 documentación</a></small>
+          </aside>
+        </div>
+      </article>
+    </div>
+  </article>
+  <article class="modal" id="trabajo-4">
+    <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path
+            d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z" />
+        </svg>
+      </a>
+      <article class="portfolio-modal">
+        <img src="assets/favicon-listuser-api.png" alt="listuser-api">
+        <div class="portfolio-info">
+          <h3>listuser</h3>
+          <p data-section="modal" data-value="forthModalDecription">listuser Proporciona vistas de una forma sencilla
+            para mostar el funcionamiento de la API de lisuser-api en tiempo real.</p>
+          <aside class="portfolio-details">
+            <small data-section="modal" data-value="titleDate"><b>FECHA:</b></small>
+            <small data-section="modal" data-value="thirdDate">dic. 2024</small>
+            <small data-section="modal" data-value="titleType"><b>TIPO:</b></small>
+            <small>SPA</small>
+            <small data-section="modal" data-value="titleLink"><b>ENLACE:</b></small>
+            <small><a href="https://velvety-tulumba-8ba4fd.netlify.app" target="_blank"
+                rel="noopener">listuser</a></small>
           </aside>
         </div>
       </article>
